<resources>
    <string name="app_name">My Application</string>
    <string name="on">on</string>
    <string name="off">off</string>
    <string name="connect">connect</string>
    <string name="disconnect">disconnect</string>
    <string name="tela_2_btn">Tela DOIS</string>
    <string name="btn_login">Tela login</string>
    <string name="logo_description">logo inteliampo</string>
    <string name="btnAnimalText">Animal\n</string>
    <string name="btnFarmText">Fazenda</string>
    <string name="btn_antenna_config">Configurar Antena</string>
    <string name="selectRace">Raça do animal</string>
    <string name="selectSex">Sexo do animal</string>
    <string name="selectType">Tipo do animal</string>


</resources>