<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/on"
        android:layout_width="91dp"
        android:layout_height="42dp"
        android:text="@string/on"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/off"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/off"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/on"/>

    <Button
        android:id="@+id/connect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connect"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/off"/>

    <Button
        android:id="@+id/disconnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/disconnect"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/connect"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="117dp"
        android:layout_height="56dp"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-light"
        android:text="TESTE"
        android:textSize="34sp"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/disconnect"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/statusConnectedTextViewId"
        android:layout_width="331dp"
        android:layout_height="48dp"
        android:layout_marginTop="116dp"
        android:fontFamily="sans-serif-light"
        android:text="No Connected"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/disconnect"
        tools:ignore="MissingConstraints" />


    <Button
        android:id="@+id/tela_2_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="telaDoisRedirect"
        android:text="@string/tela_2_btn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/statusConnectedTextViewId" />

</androidx.constraintlayout.widget.ConstraintLayout>